--- a/www/assets/i18n/தமிழ்.json
+++ b/www/assets/i18n/தமிழ்.json
@@ -35,5 +35,8 @@
         "Bengal gram": "சுண்டல்",
         "Horse gram": "கொள்ளு",
         "Bhendi": "வெண்டை",
-        "Mulberry": "மல்பெரி"
+        "Mulberry": "மல்பெரி",
+        "Coconut": "தேங்காய்",
+        "Lemon": "எலுமிச்சை"
+
 }
