--- a/src/assets/i18n/தமிழ்.json
+++ b/src/assets/i18n/தமிழ்.json
@@ -36,7 +36,57 @@
         "Horse gram": "கொள்ளு",
         "Bhendi": "வெண்டை",
         "Mulberry": "மல்பெரி",
-        "Coconut": "தேங்காய்",
-        "Lemon": "எலுமிச்சை"
-
+        "Coconut": "தென்னை",
+        "Lemon": "எலுமிச்சை",
+        "Please select at lease one Image!": "குறைந்தது ஒரு புகைப்படத்தைத் தேர்ந்தெடுக்கவும்",
+        "Please Select A Crop!": "பயிர் ஒன்றைத் தேர்ந்தெடுக்கவும்",
+        "Please Enter the Age of the Crop!": "பயிர் வயதை உள்ளிடுக",
+        "Day": "நாட்கள்",
+        "Month": "மாதம்",
+        "Year": "வருடம்",
+        "Age": "வயது",
+        "Groundnut": "நிலக்கடலை",
+        "Garlic": "வெள்ளை பூண்டு",
+        "Amaranthus": "கீரை",
+        "Guava": "கொய்யாப்பழம்",
+        "Banana": "வாழைப்பழம்",
+        "Citrus": "எலுமிச்சை",
+        "Mango": "மாம்பழம்",
+        "Pomegranate": "மாதுளை",
+        "Sapota": "சப்போட்டா",
+        "Cucumber": "வெள்ளரி",
+        "Bottle gourd": "சுரைக்காய்",
+        "Bittergourd": "பாகற்காய்",
+        "Pumpkin": "பூசணி",
+        "Ash gourd": "சாம்பல்பூசணி",
+        "Snake gourd": "புடலங்காய்",
+        "Ridge gourd": "பீர்க்கங்காய்",
+        "Yam": "சேனைக்கிழங்கு",
+        "Colacasia": "செப்பைக்கிழங்கு",
+        "Rose": "ரோஜா",
+        "Jasmine": "மல்லிகை",
+        "Tuberose": "சம்பங்கி",
+        "Jack fruit": "பலாப்பழம்",
+        "Crossandra": "கனகாம்பரம்",
+        "Marigold": "செண்டுமல்லி",
+        "Chrysanthemum": "செவ்வந்தி",
+        "Arecanut": "பாக்குமரம்",
+        "Nutmeg": "ஜாதிக்காய்",
+        "Cashewnut": "முந்திரி",
+        "Drumstick": "முருங்கை",
+        "Sugarcane": "கரும்பு",
+        "Sunflower": "சூரியகாந்தி",
+        "Curryleaf": "கறிவேப்பிலை",
+        "Grapes": "திராட்சை",
+        "Turmeric": "மஞ்சள்",
+        "Millets": "சிறுதாணியம்",
+        "Coriander": "கொத்தமல்லி",
+        "Potato": "கிழங்கு",
+        "Chow chow": "மேரக்காய்",
+        "Nerium": "அரளி",
+        "Water melon": "தர்பூசணி",
+        "Muskmelon": "முலாம்பழம்",
+        "Beans": "பீன்ஸ்",
+        "Recommendations": "ஆலோசனை",
+        "Your Request is uploaded!": "உங்கள் கோரிக்கை பதிவேற்றப்பட்டது!"
 }
